# DeltaStream

./: .dockerignore  .gitignore  AVBufferData.h  Benchmark.h  CMakeLists.txt  ClientBenchmarkMap.h  DecodedFrameDTO.h  DecodedFrameDTOManager.cpp  DecodedFrameDTOManager.h  DeltaMotion.h  Dockerfile  EncodedFrame.h  EncodedFrameDTO.h  FPSCounter.h  FfmpegToolbox.cpp  FfmpegToolbox.h  FrameData.h  FrameDataType.h  FrameMapManager.cpp  FrameMapManager.h  MVFrameLatencyReport.cpp  MVFrameLatencyReport.h  MovingAverage.hpp  README.md  ServerBenchmarkMap.h  client.cpp  client.h  config.h  draco.h  logging.h  main.cpp  realsense.h  tools.h  vcpkg.json
custom_types/: ClientFeedback.h  DepthConfig.h  MVFramePrepData.h  MultiCameraDecodedFrameDTO.h  MultiCameraEncodedFrame.h  MultiCameraEncodedFrameDTO.h  MultiCameraFrameData.h  RawFrame.h
encoded_frame_handlers/: PartialFrameHandler.cpp  PartialFrameHandler.h
frame_preppers/: BlockUpdatePrepper.cpp  BlockUpdatePrepper.h  MotionVectorPrepper.cpp  MotionVectorPrepper.h
raw_frame_producers/: ImageRawFrameProducer.cpp  ImageRawFrameProducer.h  RealSenseRawFrameProducer.cpp  RealSenseRawFrameProducer.h
